--- a/templates/about.html
+++ b/templates/about.html
@@ -132,7 +132,7 @@
         </div>
 
         <div class="text-center mt-4">
-            <a href="{{ url_for('home') }}" class="btn btn-primary btn-lg">
+            <a href="{{ url_for('index') }}" class="btn btn-primary btn-lg">
                 <i class="fas fa-arrow-right"></i> Start Your Journey
             </a>
         </div>
