--- a/templates/journal.html
+++ b/templates/journal.html
@@ -135,7 +135,7 @@
 
         <!-- Navigation -->
         <div class="text-center mt-4">
-            <a href="{{ url_for('home') }}" class="btn btn-outline-secondary me-2">
+            <a href="{{ url_for('index') }}" class="btn btn-outline-secondary me-2">
                 <i class="fas fa-arrow-left"></i> Choose Different Mood
             </a>
             <a href="{{ url_for('mood_tracker') }}" class="btn btn-outline-primary">
