--- a/templates/tracker.html
+++ b/templates/tracker.html
@@ -109,7 +109,7 @@
                     You haven't written any journal entries yet, but that's okay!<br>
                     Every journey begins with a single step.
                 </p>
-                <a href="{{ url_for('home') }}" class="btn btn-primary btn-lg">
+                <a href="{{ url_for('index') }}" class="btn btn-primary btn-lg">
                     <i class="fas fa-plus"></i> Start My First Entry
                 </a>
             </div>
@@ -117,7 +117,7 @@
 
         <!-- Navigation -->
         <div class="text-center mt-5">
-            <a href="{{ url_for('home') }}" class="btn btn-outline-primary me-2">
+            <a href="{{ url_for('index') }}" class="btn btn-outline-primary me-2">
                 <i class="fas fa-plus"></i> New Entry
             </a>
             <button onclick="window.print()" class="btn btn-outline-secondary">
