changes on color

--- a/templates/achievements.html
+++ b/templates/achievements.html
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-12 text-center mb-4">
             <h2><i class="fas fa-trophy text-warning"></i> Your Achievements</h2>
-            <p class="lead">Celebrate your emotional wellness journey!</p>
+            <p class="lead">Celebrate your emotional wellness journey🤗</p>
         </div>
     </div>
 
@@ -180,7 +180,7 @@
                     </div>
                     {% else %}
                     <h5><i class="fas fa-crown"></i> Congratulations! You've unlocked all achievements!</h5>
-                    <p>You're a true emotional wellness champion! 🏆</p>
+                    <p>You're a true emotional wellness Champ! 🏆</p>
                     <a href="{{ url_for('wellness_hub') }}" class="btn btn-light btn-lg">
                         <i class="fas fa-heart"></i> Wellness Hub
                     </a>
