--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
         <div class="text-center mt-5">
             <div class="alert alert-info" role="alert">
                 <i class="fas fa-lightbulb"></i>
-                <strong>Pro tip:</strong> There's no wrong feeling! Every emotion is valid and helps us learn about ourselves.
+                <strong>Pro tip:</strong> There's no wrong feeling.Every emotion is valid and helps us learn more about ourselves.
             </div>
         </div>
     </div>
