--- a/templates/template_journal.html
+++ b/templates/template_journal.html
@@ -36,7 +36,7 @@
             <!-- Mood Selection First -->
             <div class="card shadow mb-4">
                 <div class="card-header {% if template_type == 'gratitude' %}bg-warning{% elif template_type == 'daily_reflection' %}bg-primary{% elif template_type == 'worry_dump' %}bg-info{% else %}bg-success{% endif %} text-white">
-                    <h5><i class="fas fa-heart"></i> How are you feeling?</h5>
+                    <h5><i class="fas fa-heart"></i> How are you feeling?🤔</h5>
                 </div>
                 <div class="card-body">
                     <p>Select your current mood to personalize your experience:</p>
