--- a/templates/coping.html
+++ b/templates/coping.html
@@ -69,7 +69,7 @@
                     <h5><i class="fas fa-exclamation-triangle"></i> Need More Support?</h5>
                 </div>
                 <div class="card-body">
-                    <p>Sometimes we need extra help, and that's completely okay!</p>
+                    <p>Sometimes we need extra help, and that's completely okay.</p>
                     <div class="row">
                         <div class="col-md-6 mb-3">
                             <div class="card border-0 bg-light h-100">
