--- a/templates/templates.html
+++ b/templates/templates.html
@@ -77,22 +77,22 @@
                         <div class="col-md-3 text-center mb-3">
                             <i class="fas fa-compass fa-2x text-primary mb-2"></i>
                             <h6>Structure</h6>
-                            <p class="small">Gives direction when you don't know where to start</p>
+                            <p class="small">Gives direction when you don't know where to start from.</p>
                         </div>
                         <div class="col-md-3 text-center mb-3">
                             <i class="fas fa-search fa-2x text-success mb-2"></i>
                             <h6>Self-Discovery</h6>
-                            <p class="small">Helps you explore different aspects of your emotions</p>
+                            <p class="small">Helps you explore different aspects of your emotions.</p>
                         </div>
                         <div class="col-md-3 text-center mb-3">
                             <i class="fas fa-brain fa-2x text-info mb-2"></i>
                             <h6>Deeper Thinking</h6>
-                            <p class="small">Prompts encourage more thoughtful reflection</p>
+                            <p class="small">Prompts encourage more thoughtful reflection.</p>
                         </div>
                         <div class="col-md-3 text-center mb-3">
                             <i class="fas fa-heart fa-2x text-danger mb-2"></i>
                             <h6>Emotional Growth</h6>
-                            <p class="small">Builds emotional intelligence and self-awareness</p>
+                            <p class="small">Builds emotional intelligence and self-awareness.</p>
                         </div>
                     </div>
                 </div>
@@ -104,7 +104,7 @@
     <div class="row mt-4">
         <div class="col-12 text-center">
             <h5>Not sure which template to use?</h5>
-            <p class="text-muted">Choose based on how you're feeling right now</p>
+            <p class="text-muted">Choose based on how you're feeling right now.</p>
             <div class="btn-group flex-wrap" role="group">
                 <a href="{{ url_for('use_template', template_type='gratitude') }}" class="btn btn-outline-warning m-1">
                     😊 Feeling Happy
